bcs-ui/backend/tests/resources/formatter/networks/contents/endpoints.json
{
  "normal": {
    "apiVersion": "v1",
    "kind": "Endpoints",
    "metadata": {
      "annotations": {
        "endpoints.kubernetes.io/last-change-trigger-time": "2021-05-10T02:40:48Z"
      },
      "creationTimestamp": "2021-04-20T08:40:46Z",
      "labels": {
        "app": "nginx",
        "service.kubernetes.io/headless": ""
      },
      "name": "nginx",
      "namespace": "default",
      "resourceVersion": "564694",
      "uid": "78200e5d-c4d9-452f-8438-f77ce47156f2"
    },
    "subsets": [
      {
        "addresses": [
          {
            "ip": "127.xxx.xxx.xx1",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "web1-0",
              "namespace": "default",
              "resourceVersion": "564676",
              "uid": "cc0a91f8-720c-4ac6-a2a6-ae91955037e7"
            }
          },
          {
            "ip": "127.xxx.xxx.xx2",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "web1-1",
              "namespace": "default",
              "resourceVersion": "564616",
              "uid": "40c71104-fe5b-4aa1-ad73-ed74accb3763"
            }
          },
          {
            "ip": "127.xxx.xxx.xx3",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "nginx-deployment-66b6c48dd5-6pzjs",
              "namespace": "default",
              "resourceVersion": "564660",
              "uid": "7bfaa73f-0d68-4ca7-801c-29b0f15b6e2c"
            }
          },
          {
            "ip": "127.xxx.xxx.xx4",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "nginx-deployment-66b6c48dd5-bm6rl",
              "namespace": "default",
              "resourceVersion": "564585",
              "uid": "5a611fbc-1f8c-49d4-985e-441448fe0454"
            }
          },
          {
            "ip": "127.xxx.xxx.xx5",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "nginx-deployment-66b6c48dd5-cm9rr",
              "namespace": "default",
              "resourceVersion": "564627",
              "uid": "752d1a23-1353-4701-b915-fd6be92c53f2"
            }
          },
          {
            "ip": "127.xxx.xxx.xx6",
            "nodeName": "minikube",
            "targetRef": {
              "kind": "Pod",
              "name": "web1-2",
              "namespace": "default",
              "resourceVersion": "564688",
              "uid": "5ce5daed-9936-4811-a00b-907ad44e8427"
            }
          }
        ],
        "ports": [
          {
            "name": "web",
            "port": 80,
            "protocol": "TCP"
          }
        ]
      }
    ]
  }
}
