bcs-ui/backend/tests/resources/formatter/networks/contents/ingress.json
{
  "normal": {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "kubectl.kubernetes.io/last-applied-configuration": "..."
      },
      "creationTimestamp": "2021-04-29T11:22:44Z",
      "generation": 1,
      "name": "simple-example",
      "namespace": "default",
      "resourceVersion": "420838",
      "uid": "7c3df249-4f69-4109-87ce-069dcdf7d45e"
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "test",
          "port": {
            "number": 100
          }
        }
      },
      "rules": [
        {
          "host": "foo.bar.com",
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "service",
                    "port": {
                      "number": 8080
                    }
                  }
                },
                "path": "/foo",
                "pathType": "Prefix"
              }
            ]
          }
        }
      ],
      "tls": [
        {
          "hosts": [
            "https-example.foo.com"
          ],
          "secretName": "testsecret-tls"
        }
      ]
    },
    "status": {
      "loadBalancer": {
        "ingress": [
          {
            "ip": "127.xxx.xxx.xx9"
          }
        ]
      }
    }
  }
}
