bcs-ui/backend/tests/resources/formatter/networks/contents/service.json
{
  "normal": {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "creationTimestamp": "2021-04-13T09:12:22Z",
      "labels": {
        "app": "balanced"
      },
      "name": "balanced",
      "namespace": "default",
      "resourceVersion": "1579",
      "uid": "47b46c4f-e9d2-4f0f-958a-e46e47324918"
    },
    "spec": {
      "clusterIP": "127.xxx.xxx.1",
      "clusterIPs": [
        "127.xxx.xxx.1"
      ],
      "externalTrafficPolicy": "Cluster",
      "ports": [
        {
          "nodePort": 30608,
          "port": 8080,
          "protocol": "TCP",
          "targetPort": 8080
        }
      ],
      "selector": {
        "app": "balanced"
      },
      "sessionAffinity": "None",
      "type": "LoadBalancer"
    },
    "status": {
      "loadBalancer": {
        "ingress": [
          {
            "ip": "127.xxx.xxx.xx9"
          },
          {
            "hostname": "localhost"
          }
        ]
      }
    }
  }
}
